--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@ h1 {
   background-repeat: no-repeat;
   background-position: center right;
 }
+
+.card-img-overlay{
+  background-image: url(./images/card22.svg);
+}
+
+
